# python-project-50

./: README.md  pyproject.toml
gendiff/scripts/: gendiff.py
gendiff/scripts/fuck.py/: fuck.py
tests/: duhast.py  try.py
